fix stupid overflow faq page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7,7 +7,7 @@
   background-repeat: no-repeat;
   background-position-y: 50%;
   background-size: cover;
-  /* overflow: hidden; */
+  overflow: auto;
 }
 
 .row {
